--- a/HelloWorld/HelloWorld/stylesheet.css
+++ b/HelloWorld/HelloWorld/stylesheet.css
@@ -3,12 +3,7 @@ html,body{
     height: 100%;
     margin:0;
     background-image:image(and);
-    font-size: 0px;
+    font-size: 2.em;
+    font-family: sans-serif;
 
-}
-.h1{
-color: #987987;
-
-
-font-family: sans-serif;
 }
